add composer test script

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {},
+    "scripts": {
+	"test": "php vendor/bin/phpunit"
+    }
 }
